--- a/index.html
+++ b/index.html
@@ -4,8 +4,65 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Xmas Counter</title>
+
+        <!-- font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;       700&display=swap" rel="stylesheet">
+
+        <!-- style -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
+        <div class="container">
+            <div class="xmas-stage">
+
+                <div class="panel">
+                    <h1>Xmas is coming</h1>
+                
+                    <div class="counter">
+                        <div class="counter-block">
+                            <div class="counter-block-number">00</div>
+                            <div class="counter-block-label">Giorni</div>
+                        </div>
+                        <div class="counter-block">
+                            <div class="counter-block-number">00</div>
+                            <div class="counter-block-label">Ore</div>
+                        </div>
+                        <div class="counter-block">
+                            <div class="counter-block-number">00</div>
+                            <div class="counter-block-label">Minuti</div>
+                        </div>
+                        <div class="counter-block">
+                            <div class="counter-block-number">00</div>
+                            <div class="counter-block-label">Secondi</div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <!-- tree -->
+                <img src="./images/tree.png" alt="albero">
+
+                <!-- gifts -->
+                <img class="gift gift_1" src="./images/gift_1.png" alt="regalo 1">
+                <img class="gift gift_2" src="./images/gift_2.png" alt="regalo 2">
+                <img class="gift gift_3" src="./images/gift_3.png" alt="regalo 3">
+
+                <!-- balls -->
+                <img class="ball ball_1" src="./images/ball_1.png" alt="pallina 1">
+                <img class="ball ball_2" src="./images/ball_2.png" alt="pallina 1">
+                <img class="ball ball_3" src="./images/ball_3.png" alt="pallina 1">
+                <img class="ball ball_4" src="./images/ball_4.png" alt="pallina 1">
+                <img class="ball ball_5" src="./images/ball_5.png" alt="pallina 1">
+            </div>
+
+        </div>
+
+
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap');
+        </style>
     </body>
 </html>
