Calcolo tempo a 25 dicembre

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
                 
                     <div class="counter">
                         <div class="counter-block">
-                            <div class="counter-block-number">00</div>
+                            <div id="days" class="counter-block-number">00</div>
                             <div class="counter-block-label">Giorni</div>
                         </div>
                         <div class="counter-block">
-                            <div class="counter-block-number">00</div>
+                            <div id="hours" class="counter-block-number">00</div>
                             <div class="counter-block-label">Ore</div>
                         </div>
                         <div class="counter-block">
-                            <div class="counter-block-number">00</div>
+                            <div id="minutes" class="counter-block-number">00</div>
                             <div class="counter-block-label">Minuti</div>
                         </div>
                         <div class="counter-block">
-                            <div class="counter-block-number">00</div>
+                            <div id="seconds" class="counter-block-number">00</div>
                             <div class="counter-block-label">Secondi</div>
                         </div>
                     </div>
@@ -64,5 +64,6 @@
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Livvic:wght@500;600;700&display=swap');
         </style>
+        <script src="main.js"></script>
     </body>
 </html>
